argocd/dynamic-stages/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dynamic-stages
  namespace: ds
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
  selector:
    app: dynamic-stages
