argocd/dynamic-stages/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: dynamic-stages 
  namespace: ds
spec:
  host: dynamic-stages.apps-crc.testing
  port:
    targetPort: http
  tls:
    termination: edge 
  to:
    kind: Service
    name: dynamic-stages 
    weight: 100
